fix: unable to click message due to overlap from below element

--- a/gamestar/static/css/style.css
+++ b/gamestar/static/css/style.css
@@ -46,6 +46,7 @@ h6 {
 .flash {
     position: relative;
     cursor: pointer;
+    z-index: 2;
 }
 
 .flash i {
